--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,88 +1,87 @@
 {
-  "name": "mksingh",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "check-types": "tsc --pretty --noEmit",
-    "check-format": "prettier --check .",
-    "check-lint": "eslint . --ext ts --ext tsx --ext js",
-    "format": "prettier --write .",
-    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@uploadthing/react": "^6.1.0",
-    "@vercel/analytics": "^1.1.1",
-    "appwrite": "^13.0.1",
-    "class-variance-authority": "^0.7.0",
-    "cloudinary": "^1.41.1",
-    "clsx": "^2.1.0",
-    "encoding": "^0.1.13",
-    "google-auth-library": "^9.4.1",
-    "googleapis": "^130.0.0",
-    "http-status": "^1.7.3",
-    "next": "14.0.4",
-    "next-axiom": "1.1.1",
-    "next-mdx-remote": "^4.4.1",
-    "next-themes": "^0.2.1",
-    "node-appwrite": "^11.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "rehype-highlight": "^7.0.0",
-    "set-cookie-parser": "^2.6.0",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.1.1",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@next/eslint-plugin-next": "^14.0.4",
-    "@tabler/icons-react": "^2.45.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "20.10.6",
-    "@types/react": "18.2.47",
-    "@types/react-dom": "18.2.18",
-    "@types/set-cookie-parser": "^2.4.7",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.56.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-next": "14.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-n": "^16.6.1",
-    "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "match-sorter": "^6.3.1",
-    "postcss": "8.4.33",
-    "postcss-nesting": "^12.0.2",
-    "postcss-preset-mantine": "^1.12.3",
-    "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
-  }
+    "name": "mksingh",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "check-types": "tsc --pretty --noEmit",
+        "check-format": "prettier --check .",
+        "check-lint": "eslint . --ext ts --ext tsx --ext js",
+        "format": "prettier --write .",
+        "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
+    },
+    "dependencies": {
+        "@radix-ui/react-accordion": "^1.1.2",
+        "@radix-ui/react-avatar": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-navigation-menu": "^1.1.4",
+        "@radix-ui/react-scroll-area": "^1.0.5",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@uploadthing/react": "^6.1.0",
+        "@vercel/analytics": "^1.1.1",
+        "appwrite": "^13.0.1",
+        "class-variance-authority": "^0.7.0",
+        "cloudinary": "^1.41.1",
+        "clsx": "^2.1.0",
+        "encoding": "^0.1.13",
+        "google-auth-library": "^9.4.1",
+        "googleapis": "^130.0.0",
+        "http-status": "^1.7.3",
+        "next": "14.0.4",
+        "next-axiom": "1.1.1",
+        "next-mdx-remote": "^4.4.1",
+        "next-themes": "^0.2.1",
+        "node-appwrite": "^11.1.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "rehype-highlight": "^7.0.0",
+        "set-cookie-parser": "^2.6.0",
+        "tailwind-merge": "^2.2.0",
+        "tailwindcss-animate": "^1.0.7",
+        "uploadthing": "^6.1.1",
+        "uuid": "^9.0.1",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@next/eslint-plugin-next": "^14.0.4",
+        "@tabler/icons-react": "^2.45.0",
+        "@tailwindcss/typography": "^0.5.10",
+        "@types/node": "20.10.6",
+        "@types/react": "18.2.47",
+        "@types/react-dom": "18.2.18",
+        "@types/set-cookie-parser": "^2.4.7",
+        "@types/uuid": "^9.0.7",
+        "@typescript-eslint/eslint-plugin": "^6.17.0",
+        "autoprefixer": "10.4.16",
+        "eslint": "8.56.0",
+        "eslint-config-google": "^0.14.0",
+        "eslint-config-next": "14.0.4",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-config-standard-with-typescript": "^43.0.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-n": "^16.6.1",
+        "eslint-plugin-prettier": "^5.1.2",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^15.2.0",
+        "match-sorter": "^6.3.1",
+        "postcss": "8.4.33",
+        "postcss-nesting": "^12.0.2",
+        "postcss-preset-mantine": "^1.12.3",
+        "postcss-simple-vars": "^7.0.1",
+        "prettier": "^3.1.1",
+        "prettier-plugin-tailwindcss": "^0.5.11",
+        "tailwindcss": "3.4.1",
+        "typescript": "5.3.3"
+    }
 }
